--- a/.github/workflows/adf-ci.yml
+++ b/.github/workflows/adf-ci.yml
@@ -48,5 +48,5 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: export
+          name: adfexport
           path: ${{github.workspace}}/build/export 
