--- a/.github/workflows/adf-cd.yml
+++ b/.github/workflows/adf-cd.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Download Build Artifact
         uses: actions/download-artifact@v4
         with:
-          name: adf-export
+          name: adfexport
           path: ${{ github.workspace }}/export
 
       - name: Debug - Check Downloaded Files
