--- a/.github/workflows/adf-release.yml
+++ b/.github/workflows/adf-release.yml
@@ -1,10 +1,10 @@
 name: ADF Release Pipeline
 
 on:
-  workflow_run:
-    workflows: ["ADF Build Pipeline"]
-    types:
-      - completed
+  workflow_dispatch:
+   # workflows: ["ADF Build Pipeline"]
+   #  types:
+    #  - completed
 
 permissions:
   id-token: write
