--- a/.github/workflows/adf-release.yml
+++ b/.github/workflows/adf-release.yml
@@ -26,17 +26,6 @@ jobs:
         
       - name: Debug - Check Downloaded Files
         run: ls -R ${{ github.workspace }}/export || echo "No files found"
-        
-      - name: Debug JWT Token
-        run: |
-          echo "Retrieving OIDC Token..."
-          TOKEN=$(curl -s -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | jq -r '.value')
-          echo "Decoded JWT Token Claims:"
-          echo $TOKEN | awk -F'.' '{print $2}' | base64 -d | jq .
-        env:
-          ACTIONS_ID_TOKEN_REQUEST_URL: ${{ env.ACTIONS_ID_TOKEN_REQUEST_URL }}
-          ACTIONS_ID_TOKEN_REQUEST_TOKEN: ${{ env.ACTIONS_ID_TOKEN_REQUEST_TOKEN }}
-
 
       - name: Login to Azure
         uses: azure/login@v1
@@ -44,7 +33,7 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          enable-AzPSSession: true
+          federated-credentials: ${{ secrets.AZURE_FEDERATED_CREDENTIAL }}
 
       - name: Deploy to Dev Data Factory
         uses: Azure/data-factory-deploy-action@v1.2.0
