--- a/.github/workflows/adf-release.yml
+++ b/.github/workflows/adf-release.yml
@@ -33,7 +33,7 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          federated-credential-name: ${{ secrets.FEDERATED_CREDENTIAL_NAME }}
+          enable-AzPSSession: true
 
       - name: Deploy to Dev Data Factory
         uses: Azure/data-factory-deploy-action@v1.2.0
