--- a/.github/workflows/adf-release.yml
+++ b/.github/workflows/adf-release.yml
@@ -33,7 +33,7 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           audience: api://AzureADTokenExchange
-          auth-type: OIDC
+          auth-type: SERVICE_PRINCIPAL
 
       - name: Deploy to Dev Data Factory
         uses: Azure/data-factory-deploy-action@v1.2.0
