--- a/.github/workflows/adf-release.yml
+++ b/.github/workflows/adf-release.yml
@@ -10,7 +10,8 @@ permissions:
 
 jobs:
   release:
-    runs-on: ubuntu-latest
+    environment: production
+    runs-on: ubuntu-latest     
     steps:        
       - name: Download Release Asset
         uses: dsaltares/fetch-gh-release-asset@master
