--- a/.github/workflows/adf-build.yml
+++ b/.github/workflows/adf-build.yml
@@ -46,8 +46,16 @@ jobs:
       - name: Archive Build Artifact
         run: |
           TIMESTAMP=$(date +'%Y%m%d-%H%M%S')
-          echo "ARTIFACT_NAME=adfexport-${TIMESTAMP}.zip" >> $GITHUB_ENV
-          zip -r ${{ env.ARTIFACT_NAME }} ${{ github.workspace }}/build/export
+          ARTIFACT_NAME="adfexport-${TIMESTAMP}.zip"
+          echo "ARTIFACT_NAME=${ARTIFACT_NAME}" >> $GITHUB_ENV
+          
+          # Ensure directory exists and contains files before zipping
+          if [ -d "${GITHUB_WORKSPACE}/build/export" ] && [ "$(ls -A ${GITHUB_WORKSPACE}/build/export)" ]; then
+            zip -r "${GITHUB_WORKSPACE}/${ARTIFACT_NAME}" "${GITHUB_WORKSPACE}/build/export"
+          else
+            echo "Error: No files found in build/export to zip!"
+            exit 1
+          fi
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
