--- a/.github/workflows/adf-release.yml
+++ b/.github/workflows/adf-release.yml
@@ -63,6 +63,12 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           enable-AzPSSession: true
           
+      - name: Install Required Az Modules
+        run: |
+          pwsh -Command "Install-Module -Name Az -Scope CurrentUser -Force -AllowClobber -Repository PSGallery"
+          pwsh -Command "Install-Module -Name Az.DataFactory -Scope CurrentUser -Force -AllowClobber -Repository PSGallery"
+
+          
       - name: Deploy to Dev Data Factory
         uses: Azure/data-factory-deploy-action@v1.2.0
         with:
